# ceres_bundle_adjustment

./: CMakeLists.txt  LICENSE  README.md
data/: belpy.txt  p1.xml  p2.xml
src/: CMakeLists.txt  bal_problem.cc  bundle_adjuster.cc  simple_bundle_adjuster.cpp  simple_bundle_adjuster_old.cpp  tools.h
src/CeresCore/: BundleBlockData.h  BundleSolver.cpp  BundleSolver.h  CameraData.h  CeresCore.h  CeresCore.vcxproj  CeresCore.vcxproj.filters  CollinearityError.h  CollinearitySiedelError.h  CustomIterationCallback.h  Entity.cpp  Entity.h  Enumerations.h  GroundPointError.h  IcpError.h  IcpError2.h  PointCloudManager.h  Prova.h  SensorData.h  SnavelyReprojectionError.h
src/CeresCore/Debug/CeresCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CeresCore.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/CeresCore/x64/Debug/: CeresCore.lib.recipe
